Updating main implementation for serialization and aggregation for profile API changes.
Signed-off-by: Arun Ganesh <oaganesh@amazon.com>